cp: 	PR c++/12037 	* cp-tree.h (COMPOUND_EXPR_OVERLOADED): New. 	(build_min_non_dep): Declare. 	* tree.c (build_min): Propagate TREE_SIDE_EFFECTS. 	(build_min_non_dep): New. 	* cvt.c (convert_to_void): Don't explicitly copy 	TREE_SIDE_EFFECTS, TREE_NO_UNUSED_WARNING. 	* call.c (build_new_method_call): Use build_min_non_dep. 	* decl2.c (grok_array_decl): Likewise. 	(build_offset_ref_call_from_tree): Likewise. 	* typeck.c (finish_class_member_access_expr, 	build_x_indirect_ref, build_x_binary_op, build_x_unary_op, 	build_x_conditional_expr, build_x_compound_expr): Likewise. 	(build_static_cast, build_reinterpret_cast, 	build_const_cast): Propagate TREE_SIDE_EFFECTS inside a template. 	* typeck2.c (build_x_arrow): Use build_min_non_dep. 	(build_functional_cast): Propagate TREE_SIDE_EFFECTS inside a 	template. 	* rtti.c (build_dynamic_cast_1): Set DECL_IS_PURE. 	(build_dynamic_cast): Set TREE_SIDE_EFFECTS. 	* pt.c (build_non_dependent_expr): Check COMPOUND_EXPR_OVERLOADED. testsuite: 	PR c++/12037 	* g++.dg/warn/noeffect4.C: New test.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@71108 138bc75d-0d04-0410-961f-82ee72b054a4